methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:46: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:62: error: expected class or object definition
def colorie()={
^SlugHunting:67: error: Unmatched closing brace '}' ignored here
}
^