methods.slug.SlugHunting.scala.code
val bonChemin = false
val caseVerte = false
val testGauche = false
val biscuit = false




def hunt() {
 setCouleurBrosse(Color.gray)
 testGauche = false
 leveBrosse()
 biscuit = estSurBiscuit()
 if ( biscuit){
    prendBiscuit()
 } else {
   bonChemin = isFacingTrail()
   
   while (bonChemin){
     avance()
     colorie()
   }
     gauche()
     avance()
     bocChemin = isFacingTrial()
   if (bonChemin){
     colorie()
   } else  {
     retourne()
     avance()
     avance()
     bonChemin = isFacingTrial()
     if(bonChemin){
     colorie()
      }
   }
 }
}


 return caseVerte
}
// Copy your isFacingTrail() here

def isFacingTrail():Boolean = {
 caseVerte=false
 if (estFaceMur()){
    return caseVerte
 } else {
   avance()
   if (getCouleurSol() == Color.green ){
     caseVerte = true
   } 
   recule()
 }

 return caseVerte
}


def colorie()={
  baisseBrosse()
  leveBrosse()
}